feat: add header elements
Added logo with class 'logo' and 'Header Logo' as text.

Added nav with 3 links.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="logo">
+            Header Logo
+        </div>
+        <nav>
+            <a href=" ">link one</a>
+            <a href=" ">link two</a>
+            <a href=" ">link three</a>
+        </nav>
+    </div>
     <div class="hero"></div>
     <div class="info"></div>
     <div class="quote"></div>
