--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
             <a href=" ">link three</a>
         </nav>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
+        <div class="hero-text">
+            <div class="main-title">
+                This website is awesome
+            </div>
+            <div class="main-subtext">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <img src=" ">
+    </div>
     <div class="info"></div>
     <div class="quote"></div>
     <div class="action"></div>
