feat: added placeholder image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <button class="sign-up">Sign up</button>
         </div>
-        <img src=" ">
+        <img src="placeholder.jpg" alt="placeholder image, source: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fillustrations%2Fplaceholder-image&psig=AOvVaw2XkiiXcDeVWpyx6bzwxOc-&ust=1713553708350000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMCGyJW7zIUDFQAAAAAdAAAAABAE">
     </div>
     <div class="info"></div>
     <div class="quote"></div>
