--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 This website is awesome
             </div>
             <div class="main-subtext">
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. <br> <br>
             </div>
             <button class="sign-up">Sign up</button>
         </div>
