--- a/index.html
+++ b/index.html
@@ -27,9 +27,35 @@
             </div>
             <button class="sign-up">Sign up</button>
         </div>
-        <img src="placeholder.jpg" alt="placeholder image, source: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fillustrations%2Fplaceholder-image&psig=AOvVaw2XkiiXcDeVWpyx6bzwxOc-&ust=1713553708350000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMCGyJW7zIUDFQAAAAAdAAAAABAE">
+        <img class="hero-img" src="placeholder.jpg" alt="placeholder image, source: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fillustrations%2Fplaceholder-image&psig=AOvVaw2XkiiXcDeVWpyx6bzwxOc-&ust=1713553708350000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMCGyJW7zIUDFQAAAAAdAAAAABAE">
     </div>
-    <div class="info"></div>
+    <div class="title">Some random information.</div>
+    <div class="info">
+        <div class="info-box">
+            <img src="placeholder-square.jpg" class="info-img">
+            <div class="info-text">
+                This is some subtext under an illustration or image.
+            </div>
+        </div>
+        <div class="info-box">
+            <img src="placeholder-square.jpg" class="info-img">
+            <div class="info-text">
+                This is some subtext under an illustration or image.
+            </div>
+        </div>
+        <div class="info-box">
+            <img src="placeholder-square.jpg" class="info-img">
+            <div class="info-text">
+                This is some subtext under an illustration or image.
+            </div>
+        </div>
+        <div class="info-box">
+            <img src="placeholder-square.jpg" class="info-img">
+            <div class="info-text">
+                This is some subtext under an illustration or image.
+            </div>
+        </div>
+    </div>
     <div class="quote"></div>
     <div class="action"></div>
     <div class="footer"></div>
