--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
             </div>
         </div>
     </div>
-    <div class="quote"></div>
+    <div class="quote">
+        <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. who knows? All I know is that it looks nice.
+        </div>
+        <div class="by-line">
+            -Thor, God of Thunder
+        </div>
+    </div>
     <div class="action"></div>
     <div class="footer"></div>
 </body>
