--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
             -Thor, God of Thunder
         </div>
     </div>
-    <div class="action"></div>
+    <div class="action">
+        <div class="action-text">
+            <div class="action-title">
+                Call to action! It's time!
+            </div>
+            <div class="action-subtext">
+                Sign up for that product by building that product over there!
+            </div>
+        </div>
+        <button class="sign-up-2">Sign up</button>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
