feat: add footer
add text, display flex, add background color, change text color, centre flexbox.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         </div>
         <button class="sign-up-2">Sign up</button>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        Copyright (C)
+    </div>
 </body>
 </html>
